--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,13 +1,6 @@
 <%= simple_form_for [@cocktail, @dose] do |f| %>
- <% if @dose.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-      <% @dose.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+
   <%= f.input :description %>
+  <%= f.association :ingredient, collection: Ingredient.all %>
   <%= f.submit "add a new dose", class: "btn btn-primary" %>
 <% end %>
