--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,5 @@
-// Import your components CSS files here.
-@import "alert";
-@import "navbar";
+@import "components/alert";
+@import "components/navbar";
+@import "components/footer";
+@import "components/card";
+@import "components/banner";
