--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,39 @@
-// Specific CSS for your home-page
+// Import your components CSS files here.
+
+
+body {
+  margin: 0;
+  margin-bottom: 100px;
+  font-family: 'Varela Round', sans-serif;
+}
+
+h1, h2, h3, p {
+  font-family: 'Varela Round', sans-serif;
+}
+
+.text-center {
+  text-align: center;
+  opacity: 0.8;
+}
+.container {
+  width: 960px;
+  height: 90vh;
+  margin: 50px auto;
+  padding: 0px;
+}
+
+.add_button {
+  list-style: none;
+  text-decoration: none;
+  color: grey;
+  opacity: 0.8;
+  &:hover {
+  color: grey;
+  opacity: 1;
+  text-decoration: none;
+  }
+}
+
+span .add_button {
+  margin-top: 30px;
+}
