--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,32 @@
-<h1>Cocktails#index</h1>
+    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1490324120634-0fa86c62d6c1?dpr=1&auto=compress,format&fit=crop&w=1059&h=&q=80&cs=tinysrgb&crop=')">
+    <div class="banner-content">
+    <h1>COCKTAILS</h1>
+    <p>Better cocktails for a better place</p>
+    </div>
+  </div>
 
-<% @cocktails.each do |cocktail| %>
-  <p><%= cocktail.name %></p>
-  <p>
-    <%= link_to "see", cocktail_path(cocktail) %>
-  </p>
-<% end %>
+  <div class="container">
 
-  <p><%= link_to "Create a new cocktail!", new_cocktail_path %></p>
+    <h2 class="text-center">What cocktail do you want?</h2>
+
+    <div class="cards">
+      <div class="row">
+        <% @cocktails.each do |cocktail| %>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="card">
+              <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+             url(<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>)">
+                <span class="card-name"><h3><%= cocktail.name.upcase %></h3></span>
+                <%= link_to "", cocktail_path(cocktail), class: "card-click" %>
+              </div>
+            </div>
+          </div>
+        <%end%>
+      </div>
+    </div>
+
+    <span class="add_button"><i class="fa fa-plus" aria-hidden="true"></i><%= link_to " Create a new cocktail!", new_cocktail_path, class: "add_button" %></span>
+
+  </div>
+
 
