--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,14 +1,27 @@
-<h1> <%= @cocktail.name %></h1>
+<div class="container">
 
-<h4>Ingredients</h4>
-  <% @cocktail.doses.each do |dose| %>
-  <h6><strong><%= dose.ingredient.name %></strong></h6>
-  <p>dose: <%= dose.description %></p>
-  <%= link_to "delete", dose_path(@dose = dose),
-    method: :delete,
-    data: { confirm: "Are you sure?" } %>
-  <% end %>
+<div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-6">
 
+<div class="round-image"><%= cl_image_tag @cocktail.photo, height: 300, width: 300, crop: :fill %></div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6">
+    <div class = "card-container">
+      <div class="text-content">
+        <div class = ingredient-card>
+          <h4>Ingredients</h4>
+            <% @cocktail.doses.each do |dose| %>
+            <p><%= dose.description %> de <strong><%= dose.ingredient.name %></strong>
 
+            <%= link_to "x", dose_path(@dose = dose),
+              method: :delete,
+              data: { confirm: "Are you sure?" }, class: "delete-btn" %></p>
+            <% end %>
+        </div>
 
-<p><%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail) %></p>
+        <p><%= link_to 'add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-info" %></p>
+        </div>
+    </div>
+    </div>
+
+</div>
