--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-<!--     <%= image_tag "logo.png", id: "logo" %>
- -->  </a>
+ <i class="fa fa-glass" aria-hidden="true"></i>
+  </a>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
